force-app/main/default/objects/Site_Survey__c/Site_Survey__c.object-meta.xml
<CustomObject>
    <description>KIS business process to determine the scope of a potential customer requirement - set up as a Lookup to Leads</description>
    <label>Site Survey</label>
    <nameField>
        <displayFormat>KIS-Site-{000000}</displayFormat>
        <label>Site Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>