force-app/main/default/objects/Site_Survey__c/fields/Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text__c</fullName>
    <description>Name of Contact in Text format (Not a lookup)</description>
    <inlineHelpText>Name of Contact in Text format (Not a lookup)</inlineHelpText>
    <label>Contact (Text)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>