force-app/main/default/objects/Site_Survey__c/fields/Data_Folder_List__c.field-meta.xml
<CustomField>
    <fullName>Data_Folder_List__c</fullName>
    <description>Enter in the Data Folders on separate lines.</description>
    <inlineHelpText>Enter in the Data Folders on separate lines.</inlineHelpText>
    <label>Data Folder List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>