force-app/main/default/objects/Site_Survey__c/fields/Estimated_Data_Total__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Data_Total__c</fullName>
    <description>The SUM of Data Types in Site Survey MINUS Excluded Data</description>
    <formula>Exchange_Data_GB__c  +  Lotus_Data_GB__c  +  MySQL_Data_GB__c  +  MySQL_Data_GB__c  +  Oracle_Data_GB__c  +  SQL_Data_GB__c  +  Other_Data_GB__c  -  Exclusion_Data_GB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The SUM of Data Types in Site Survey MINUS Excluded Data</inlineHelpText>
    <label>Estimated Data Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>