force-app/main/default/objects/Site_Survey__c/fields/Exchange_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Data_GB__c</fullName>
    <description>Total Exchange Data in GB for Site Survey.</description>
    <inlineHelpText>Total Exchange Data in GB for Site Survey.</inlineHelpText>
    <label>Exchange Data (GB)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>