force-app/main/default/objects/Site_Survey__c/fields/Excluded_F__c.field-meta.xml
<CustomField>
    <fullName>Excluded_F__c</fullName>
    <description>KIS - Site Survey - Enter the  Excluded Folders on Separate Lines</description>
    <inlineHelpText>KIS - Site Survey - Enter the  Excluded Folders on Separate Lines</inlineHelpText>
    <label>Excluded Folders List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>