force-app/main/default/objects/Site_Survey__c/fields/Exclusion_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Data_GB__c</fullName>
    <description>Total Excluded Data in GB for Site Survey.</description>
    <inlineHelpText>Total Excluded Data in GB for Site Survey.</inlineHelpText>
    <label>Exclusion Data (GB)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>