force-app/main/default/objects/Site_Survey__c/fields/Lotus_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>Lotus_Data_GB__c</fullName>
    <description>Total Lotus Data in GB for Site Survey.</description>
    <inlineHelpText>Total Lotus Data in GB for Site Survey.</inlineHelpText>
    <label>Lotus Data (GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>