force-app/main/default/objects/Site_Survey__c/fields/MySQL_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>MySQL_Data_GB__c</fullName>
    <description>Total MySQL Data in GB for Site Survey.</description>
    <inlineHelpText>Total MySQL Data in GB for Site Survey.</inlineHelpText>
    <label>MySQL Data (GB)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>