force-app/main/default/objects/Site_Survey__c/fields/Notes_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Notes_Site_Survey__c</fullName>
    <description>Notes related to KIS Site Survey.</description>
    <inlineHelpText>Notes related to KIS Site Survey.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>