force-app/main/default/objects/Site_Survey__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Site Survey (Related: Opportunity)</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>