force-app/main/default/objects/Site_Survey__c/fields/Oracle_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Data_GB__c</fullName>
    <description>Total Oracle Data in GB for Site Survey.</description>
    <inlineHelpText>Total Oracle Data in GB for Site Survey.</inlineHelpText>
    <label>Oracle Data (GB)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>