force-app/main/default/objects/Site_Survey__c/fields/Other_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>Other_Data_GB__c</fullName>
    <description>KIS Site Survey - Other Data in GB</description>
    <inlineHelpText>KIS Site Survey - Other Data in GB</inlineHelpText>
    <label>Other Data (GB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>