force-app/main/default/objects/Site_Survey__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>KIS - Select the Account this Site Survey is related with.  In case of a Site Survey created on a Lead - Please update this value after Convert Lead process.</description>
    <inlineHelpText>KIS - Select the Account this Site Survey is related with.  In case of a Site Survey created on a Lead - Please update this value after Convert Lead process.</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Surveys (Related Account)</relationshipLabel>
    <relationshipName>Site_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>