force-app/main/default/objects/Site_Survey__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead / Prospect which owns this Site Survey.</description>
    <inlineHelpText>The Lead / Prospect which owns this Site Survey.</inlineHelpText>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Site Surveys</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>