force-app/main/default/objects/Site_Survey__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>KIS - Please select the name of your colleague who requested this Site Survey.  This will help automatically send a completion email and update the status in reports.</description>
    <inlineHelpText>KIS - Please select the name of your colleague who requested this Site Survey.  This will help automatically send a completion email and update the status in reports.</inlineHelpText>
    <label>Requested By:</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Keep</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>admin</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>