force-app/main/default/objects/Site_Survey__c/fields/Reseller_If_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reseller_If_Needed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Look up for the referring Re-seller and Prospect owner.</description>
    <inlineHelpText>The Look up for the referring Re-seller and Prospect owner.</inlineHelpText>
    <label>Reseller (If Needed)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>KeepItSafe, KeepItSafeUS</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Surveys</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>