force-app/main/default/objects/Site_Survey__c/fields/Site_Survey_is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KIS - Is the Site Survey Completed?  By clicking the check box here - we will let the requester know you are finished and start the Quote Generation phase</description>
    <inlineHelpText>KIS - Is the Site Survey Completed?  By clicking the check box here - we will let the requester know you are finished and start the Quote Generation phase</inlineHelpText>
    <label>Site Survey is Completed?</label>
    <type>Checkbox</type>
</CustomField>