force-app/main/default/objects/Site_Survey__c/fields/SQL_Data_GB__c.field-meta.xml
<CustomField>
    <fullName>SQL_Data_GB__c</fullName>
    <description>Total SQL Data in GB for Site Survey.</description>
    <inlineHelpText>Total SQL Data in GB for Site Survey.</inlineHelpText>
    <label>SQL Data (GB)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>