force-app/main/default/objects/Site_Survey__c/fields/SSId__c.field-meta.xml
<CustomField>
    <fullName>SSId__c</fullName>
    <formula>Id</formula>
    <label>SSId</label>
    <type>Text</type>
</CustomField>