force-app/main/default/objects/Site_Survey__c/fields/SSname__c.field-meta.xml
<CustomField>
    <fullName>SSname__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSname</label>
    <type>Text</type>
</CustomField>