force-app/main/default/objects/Site_Survey__c/recordTypes/KIS_Site_Survey_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>KIS_Site_Survey_Record_Type</fullName>
    <active>true</active>
    <description>KIS: Site Survey</description>
    <label>KIS: Site Survey</label>
</RecordType>