force-app/main/default/objects/Site_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contact_Text__c</columns>
    <columns>Related_Lead__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Estimated_Data_Total__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>KeepItSafe</group>
        <group>KeepItSafe_US_Group</group>
    </sharedTo>
</ListView>